--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sass": "^1.29.0",
     "sass-loader": "^7.3.1",
     "tailwindcss": "^2.0.1",
+    "tailwindcss-filters": "^3.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
